--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -917,7 +917,7 @@ tab_bar_margin_color none
 
 #: Color scheme {{{
 
-foreground #dfbf8e
+foreground #d8cacc
 background #282828
 
 #: The foreground and background colors
@@ -978,8 +978,10 @@ dim_opacity 0.75
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #000000
-selection_background #fffacd
+# selection_foreground #000000
+# selection_background #fffacd
+selection_foreground  #3c474d
+selection_background  #525c62
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
@@ -995,45 +997,37 @@ selection_background #fffacd
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-color0 #665c54
-color8 #928374
+# black
+color0   #4a555b
+color8   #525c62
 
-#: black
+# red
+color1   #e68183
+color9   #e68183
 
-color1 #ea6962
-color9 #ea6962
+# green
+color2   #a7c080
+color10  #a7c080
 
-#: red
+# yellow
+color3   #dbbc7f
+color11  #dbbc7f
 
-color2  #a9b665
-color10 #a9b665
+# blue
+color4  #7fbbb3
+color12 #7fbbb3
 
-#: green
+# magenta
+color5   #d699b6
+color13  #d699b6
 
-color3  #e78a4e
-color11 #e3a84e
+# cyan
+color6   #83c092
+color14  #83c092
 
-#: yellow
-
-color4  #7daea3
-color12 #7daea3
-
-#: blue
-
-color5  #d3869b
-color13 #d3869b
-
-#: magenta
-
-color6  #89b482
-color14 #89b482
-
-#: cyan
-
-color7  #dfbf8e
-color15 #dfbf8e
-
-#: white
+# white
+color7   #d8caac
+color15  #d8caac
 
 mark1_foreground black
 
