--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -917,12 +917,12 @@ tab_bar_margin_color none
 
 #: Color scheme {{{
 
-foreground #d8cacc
-background #282828
+foreground #ebdbb2
+background #272727
 
 #: The foreground and background colors
 
-background_opacity 1.0
+background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -980,8 +980,8 @@ dim_opacity 0.75
 
 # selection_foreground #000000
 # selection_background #fffacd
-selection_foreground  #3c474d
-selection_background  #525c62
+selection_foreground  #655b53
+selection_background  #ebdbb2
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
@@ -998,36 +998,37 @@ selection_background  #525c62
 #: remaining 240 colors as color16 to color255.
 
 # black
-color0   #4a555b
-color8   #525c62
+color0   #272727
+color8   #928373
 
 # red
-color1   #e68183
-color9   #e68183
+color1   #cc231c
+color9   #fb4833
 
 # green
-color2   #a7c080
-color10  #a7c080
+color2   #989719
+color10  #b8ba25
 
 # yellow
-color3   #dbbc7f
-color11  #dbbc7f
+color3   #d79920
+color11  #fabc2e
 
 # blue
-color4  #7fbbb3
-color12 #7fbbb3
+color4  #448488
+color12 #83a597
 
 # magenta
-color5   #d699b6
-color13  #d699b6
+color5   #b16185
+color13  #d3859a
 
 # cyan
-color6   #83c092
-color14  #83c092
+color6   #689d69
+color14  #8ec07b
 
 # white
-color7   #d8caac
-color15  #d8caac
+color7   #a89983
+color15  #ebdbb2
+
 
 mark1_foreground black
 
