--- a/i3/config
+++ b/i3/config
@@ -1,3 +1,4 @@
+
 # exec --no-startup-id ~/set_once.sh
 # This file is a modified version based on default i3-config-wizard config
 # source is available here:
@@ -171,7 +172,7 @@ bindcode $mod+Shift+90 	 move container to workspace  $ws10
 bindsym $mod+e exec emacs
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
