--- a/i3/polybar/config
+++ b/i3/polybar/config
@@ -16,27 +16,26 @@ monitor =
 monitor-fallback =
 monitor-strict = false
 
-override-redirect = false
+override-redirect = true
 
 bottom = false
 fixed-center = true
 
-width = 100%
-height = 25
+width = 99%
+height = 20
 
-offset-x = 0%
-offset-y = 0%
+offset-x = 0.5%
+offset-y = 5
 
 background = ${color.background}
 foreground = ${color.foreground}
 
-radius-top = 0.0
-radius-bottom = 0.0
+radius = 2
 
-line-size = 2
+line-size = 1
 line-color = ${color.blue}
 
-border-size = 6
+border-size = 5
 border-color = ${color.background}
 
 padding = 0
@@ -57,6 +56,7 @@ font-3 = "Iosevka Nerd Font:size=18;4"
 modules-left = spacing BLD launcher BRD dot GLD cpu YPL memory CPL filesystem CRD 
 modules-center = LD xwindow BPR i3 RD 
 modules-right = MLD network MPL volume ARRD dot BLD time BRD spacing
+
 
 spacing = 0
 dim-value = 1.0
