--- a/sway/config
+++ b/sway/config
@@ -4,69 +4,49 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+# General options
 gaps inner 5
-default_border none
+default_border pixel 2
+client.focused #ebdbb2 #ebdbb2 #ebdbb2
 output HDMI-A-1 scale 0.75
 output eDP-1 disable
+xwayland enable
+
+# configuring the input
+input * {
+	xkb_layout br
+}
+
+# wallpaper and font
+#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/Pictures/gruvbox/gruvbox/nvim.jpg fill
 font pango:JetBrains Mono 12
 
 ### Variables
-#
+
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
+
 # Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
+
 # Your preferred terminal emulator
 set $term kitty
+
 # Your preferred web browser
-#set $browser brave -ozone-platform=wayland
-set $browser firefox
+set $browser brave 
+#set $browser firefox
+
+# Your preferred editor
+set $editor "kitty -e nvim"
+
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
-
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
 
 ### Key bindings
 #
@@ -83,6 +63,12 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
 
     # Start your launcher
     bindsym $mod+d exec $menu
+
+    # Start your editor
+    bindsym $mod+e exec $editor
+
+    # Screensshot utility
+    bindsym $mod+p exec grim
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -104,6 +90,7 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
     bindsym $mod+$down focus down
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
+
     # Or use $mod+[up|down|left|right]
     bindsym $mod+Left focus left
     bindsym $mod+Down focus down
@@ -115,6 +102,7 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
     bindsym $mod+Shift+$down move down
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
+
     # Ditto, with arrow keys
     bindsym $mod+Shift+Left move left
     bindsym $mod+Shift+Down move down
@@ -146,6 +134,7 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
     bindsym $mod+8 workspace $ws8
     bindsym $mod+9 workspace $ws9
     bindsym $mod+0 workspace $ws10
+
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace $ws1
     bindsym $mod+Shift+2 move container to workspace $ws2
@@ -165,8 +154,8 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
+    bindsym $mod+v splith
+    bindsym $mod+b splitv
 
     # Switch the current container between different layout styles
     #bindsym $mod+s layout stacking
@@ -196,6 +185,7 @@ output * bg ~/Pictures/gruvbox/gruvbox/platform.jpg fill
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+backslash scratchpad show
+
 #
 # Resizing containers:
 #
@@ -243,16 +233,14 @@ bar {
     colors {
         statusline #ebdbb2
         background #3c3836
-        focused_workspace #928374 #928374 #282828
-        inactive_workspace #665c54 #665c54 #ebdbb2
+        inactive_workspace #928374 #928374 #282828
+        focused_workspace #665c54 #665c54 #ebdbb2
     }
 }
 
 include /etc/sway/config.d/*
 
-input * {
-	xkb_layout br
-}
+# Sweet volume handling with i3blocks/scripts/volume
 
 # Pipewire-pulse
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle
@@ -268,4 +256,3 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+p exec grim
